--- a/config/samples/hello_v1_helloworld.yaml
+++ b/config/samples/hello_v1_helloworld.yaml
@@ -9,4 +9,4 @@ metadata:
     app.kubernetes.io/created-by: hello-operator
   name: helloworld-sample
 spec:
-  # TODO(user): Add fields here
+  foo: "JUDE"
