--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -70,7 +70,7 @@ spec:
         - /manager
         args:
         - --leader-elect
-        image: quay.io/jnirosha/controller:latest
+        image: controller:latest
         name: manager
         securityContext:
           allowPrivilegeEscalation: false
